# Breakout

./: CMakeLists.txt  Shader.cpp  Shader.h  glad.c  main.cpp
gameobjects/: Ball.cpp  Ball.h  Plane.cpp  Plane.h  Platform.cpp  Platform.h  structs.h
